--- a/app/src/main/res/drawable/ic_backarrow.xml
+++ b/app/src/main/res/drawable/ic_backarrow.xml
@@ -1,6 +1,8 @@
-<vector android:height="24dp" android:tint="#ABDA9B"
+<vector xmlns:tools="http://schemas.android.com/tools"
+    android:height="24dp" android:tint="#ABDA9B"
     android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android"
+    tools:ignore="MissingDefaultResource">
     <path android:fillColor="@android:color/white" android:pathData="M17.59,18l1.41,-1.41l-4.58,-4.59l4.58,-4.59l-1.41,-1.41l-6,6z"/>
     <path android:fillColor="@android:color/white" android:pathData="M11,18l1.41,-1.41l-4.58,-4.59l4.58,-4.59l-1.41,-1.41l-6,6z"/>
 </vector>
