--- a/app/src/main/res/layout/mygarden.xml
+++ b/app/src/main/res/layout/mygarden.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:alpha="0.65"
             android:background="@drawable/custom_card_background"
+            app:cardCornerRadius="20dp"
             app:cardElevation="20dp">
 
             <RelativeLayout
@@ -44,7 +45,6 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="left"
                         android:orientation="horizontal"
                         android:padding="4dp"
                         android:paddingBottom="1dp">
@@ -78,15 +78,15 @@
                         </androidx.cardview.widget.CardView>
 
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="fill_vertical"
                             android:orientation="vertical">
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/quicksand_light"
+                                android:gravity="left"
                                 android:paddingLeft="5dp"
                                 android:paddingTop="5dp"
                                 android:text="Welcome Back ,"
@@ -110,7 +110,7 @@
                                     android:text="[Username]"
                                     android:textColor="#68A06B"
                                     android:textSize="12sp"
-                                    android:textStyle="bold"></TextView>
+                                    android:textStyle="bold" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -121,11 +121,26 @@
                                     android:text="!"
                                     android:textColor="#68A06B"
                                     android:textSize="12sp"
-                                    android:textStyle="bold"></TextView>
+                                    android:textStyle="bold" />
+
 
                             </LinearLayout>
 
                         </LinearLayout>
+
+                        <ImageButton
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:layout_gravity="right|end"
+                            android:layout_marginLeft="160dp"
+                            android:backgroundTint="#00000000"
+                            android:contentDescription="click"
+                            android:contextClickable="false"
+                            android:foregroundGravity="right"
+                            android:minWidth="48dp"
+                            android:minHeight="48dp"
+                            android:visibility="visible"
+                            app:srcCompat="@drawable/more" />
 
 
                     </LinearLayout>
@@ -141,6 +156,8 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:outlineSpotShadowColor="#00000000"
+            android:outlineAmbientShadowColor="#00000000"
             app:cardBackgroundColor="#00FFFFFF">
 
             <RelativeLayout
@@ -160,25 +177,39 @@
                     android:paddingTop="16sp"
                     android:paddingBottom="10sp">
 
-                    <ImageView
-                        android:layout_width="42sp"
-                        android:layout_height="42sp"
+                    <ImageButton
+                        android:layout_width="52dp"
+                        android:layout_height="48dp"
+                        android:backgroundTint="#00000000"
+                        android:contentDescription="click"
+                        android:minWidth="48dp"
+                        android:minHeight="48dp"
+                        android:visibility="visible"
+                        tools:ignore="ContentDescription"
                         android:layout_gravity="center_horizontal"
                         android:scaleType="fitXY"
-                        app:srcCompat="@drawable/ic_Backarrow" />
+                        app:srcCompat="@drawable/arrow" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="42sp"
                         android:layout_gravity="center_horizontal"
+                        android:cursorVisible="false"
+
                         android:fontFamily="@font/quicksand_light"
+                        android:foregroundTint="#FFFFFFFF"
+                        android:foregroundTintMode="multiply"
                         android:includeFontPadding="true"
                         android:padding="2sp"
-
+                        android:shadowColor="#FFFFFFFF"
                         android:text="My Garden"
                         android:textColor="#FFFFFF"
+                        android:textColorHighlight="#FFFFFF"
+                        android:textColorHint="#FFFFFFFF"
+                        android:textColorLink="#FFFFFFFF"
                         android:textSize="27sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:visibility="visible" />
 
                 </LinearLayout>
             </RelativeLayout>
@@ -190,6 +221,8 @@
             android:layout_height="match_parent"
             app:cardBackgroundColor="#00FFFFFF">
         <androidx.cardview.widget.CardView
+            android:outlineSpotShadowColor="#00000000"
+            android:outlineAmbientShadowColor="#00000000"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:cardBackgroundColor="#00FFFFFF">
@@ -213,17 +246,18 @@
                     android:outlineSpotShadowColor="@color/black">
 
                     <ImageView
-                        android:id="@+id/mygarden1"
+                        android:id="@+id/image_mygarden1"
                         android:layout_width="165sp"
                         android:layout_height="190sp"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
                         android:layout_weight="1"
                         android:scaleType="fitXY"
-                        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+                        tools:srcCompat="@tools:sample/backgrounds/scenic"
+                        tools:ignore="InvalidId" />
 
                     <TextView
-                        android:id="@+id/mygarden1"
+                        android:id="@+id/text_mygarden1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="12sp"
@@ -249,7 +283,7 @@
                     app:cardCornerRadius="7dp">
 
                     <ImageView
-                        android:id="@+id/mygarden2"
+                        android:id="@+id/image_mygarden2"
                         android:layout_width="165sp"
                         android:layout_height="190sp"
                         android:layout_alignParentStart="true"
@@ -259,7 +293,7 @@
                         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
                     <TextView
-                        android:id="@+id/mygarden2"
+                        android:id="@+id/text_mygarden2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="bottom|left"
@@ -284,7 +318,7 @@
                     android:outlineSpotShadowColor="@color/black">
 
                     <ImageView
-                        android:id="@+id/mygarden3"
+                        android:id="@+id/image_mygarden3"
                         android:layout_width="165sp"
                         android:layout_height="190sp"
                         android:layout_alignParentStart="true"
@@ -293,7 +327,7 @@
                         android:scaleType="fitXY"
                         tools:srcCompat="@tools:sample/backgrounds/scenic" />
                     <TextView
-                        android:id="@+id/mygarden3"
+                        android:id="@+id/text_mygarden3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="12sp"
